syntax = "proto3";
package sender;

// SendRequest is a request to the service to send token to the specified wallet
message SendRequest {
	string service = 1;    // Service name (to differentiate multiple requestors): 1..64
	string id = 2;         // Unique request ID (within service): 1..64
	string publicKey = 3;  // Destination wallet address in Base58
	string token = 4;      // GOLD or MNT
	string amount = 5;     // Token amount in major units: 1.234 (18 decimal places)
}

// SendReply is a reply for SendRequest
message SendReply {
	bool success = 1;  // Success is true in case of success
	string error = 2;  // Error contains error descrition in case of failure
}

// SentEvent is an event from the service notifying about a wallet sending transaction result
message SentEvent {
	bool success = 1;        // Success is true in case of success
	string error = 2;        // Error contains error descrition in case of failure
	string service = 3;      // Service name (to differentiate multiple requestors): 1..64
	string id = 4;           // Unique request ID: 1..64
	string publicKey = 5;    // Destination wallet address in Base58 (empty on failure)
	string token = 6;        // GOLD or MNT (empty on failure)
	string amount = 7;       // Token amount in major units: 1.234 (18 decimal places, empty on failure)
	string transaction = 8;  // Transaction digest in Base58 (empty on failure)
}

// SentEventReply is a reply for SentEvent
message SentEventReply {
	bool success = 1;  // Success is true in case of success
	string error = 2;  // Error contains error descrition in case of failure
}
